[gd_scene load_steps=3 format=3 uid="uid://ctdxbiqosiwkq"]

[ext_resource type="Script" uid="uid://cqxgf23qf8od8" path="res://scenes/pause/pause.gd" id="1_2vals"]
[ext_resource type="PackedScene" uid="uid://bqtrth1hlekr0" path="res://scenes/pause/options.tscn" id="2_6npj3"]

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2vals")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -56.5
offset_right = 75.0
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2

[node name="Main" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Resume" type="Button" parent="MarginContainer/Main"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="Options" type="Button" parent="MarginContainer/Main"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="Exit" type="Button" parent="MarginContainer/Main"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Exit"

[node name="OptionsMenu" parent="MarginContainer" instance=ExtResource("2_6npj3")]
visible = false
layout_mode = 2

[connection signal="pressed" from="MarginContainer/Main/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/Main/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/Main/Exit" to="." method="_on_exit_pressed"]
